@@ -39,7 +39,12 @@ module.exports = buildMiddleware;
  *       callback(200, {}, "Hello world!");
  *   });
  */
-function buildMiddleware(app) {
+function buildMiddleware(app, callback) {
+    if (typeof app === "function") {
+        callback = app;
+        app = null;
+    }
+
     app = app || utils.notFound;
 
     var stack = [];
@@ -129,17 +134,18 @@ function buildMiddleware(app) {
         }
     };
 
+    if (typeof callback === "function") {
+      callback(build);
+    }
+
     return build;
 }
 
 function makeMap(app, locations) {
     var localMap = urlMap(app);
 
-    var build;
     for (var location in locations) {
-        build = buildMiddleware();
-        locations[location](build);
-        localMap.map(location, build);
+        localMap.map(location, buildMiddleware(null, locations[location]));
     }
 
     return localMap;
