@@ -1,3 +1,8 @@
+= HEAD
+
+  * Added the ability to pass a callback as the second argument to a build
+    middleware. This callback receives the build as its only argument.
+
 = 0.15.1 / 2012-05-31
 
   * Updates to some documentation.
